--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,7 +61,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2.5rem 0 1rem;
+    padding: 1rem 2.5rem 1rem 1rem;
 }
     
 .logo {
@@ -71,13 +71,8 @@ header {
 
 .nav-links {
     display: flex;
+    gap: 2rem;
     list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.nav-links li {
-    padding: 1rem;
 }
 
 .nav-links li a {
