--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,6 +62,7 @@ button {
 footer {
     text-align: center;
     width: 100%;
+    background-color: #724122;
 }
 
 .footer-container {
@@ -113,7 +114,7 @@ footer {
 }
 
 .copyright {
-    background-color: #724122;
+    background-color: #5c341b;
     color: #FFF;
     padding: 0.3rem;
     margin: 0;
@@ -151,4 +152,136 @@ header {
     font-weight: bold;
     color: #724122;
     text-decoration: none;
+}
+
+/* MEDIA QUERIES----------------------------------------------------*/
+
+/* md */
+@media (max-width: 768px) {
+
+    /* NAVBAR --------------------------------------------------------*/
+
+    .logo {
+        height: 80px;
+    }
+
+    .nav-links li a {
+        font-size: 17px;
+    }
+
+    /* FOOTER --------------------------------------------------------*/
+
+    .footer-container {
+        gap: 2rem;
+        padding: 2rem;
+    }
+
+    .open-hours {
+        font-size: 17px;
+        max-width: 400px;
+    }
+
+    .open-hours h4 {
+        font-size: 1.5rem;
+    }
+
+    .hours {
+        padding: 1rem;
+    }
+
+    .hours h5 {
+        font-size: 1.25rem;
+    }
+
+    .copyright {
+       padding: 0.5rem;
+    }
+}   
+
+/* sm */
+@media (max-width: 640px) {
+    
+    /* NAVBAR --------------------------------------------------------*/
+
+    header {
+        padding: 0.75rem;
+        justify-content: flex-start;
+    }
+
+    .logo {
+        height: 60px;
+    }
+
+    .nav-links {
+        gap: 0.75rem;
+    }
+
+    .nav-links li a {
+        font-size: 15px;
+    }
+
+    /* FOOTER --------------------------------------------------------*/
+
+    .footer-container {
+        gap: 1rem;
+        padding: 1.5rem;
+    }
+
+    .open-hours {
+        font-size: 17px;
+        max-width: 350px;
+    }
+
+    .open-hours h4 {
+        font-size: 1.5rem;
+    }
+
+    .hours {
+        padding: 0.5rem;
+    }
+
+    .hours h5 {
+        font-size: 1.25rem;
+    }
+
+    .copyright {
+       padding: 0.5rem;
+    }
+
+    .social-media {
+        max-width: 500px;
+        flex-direction: row;
+        padding: 0.3rem 1rem;
+    }
+    
+    .social-media h4 {
+        padding-right: 0.7rem;
+    }
+    
+    .social-items {
+        padding-left: 0.5rem;
+    }
+}
+
+/* xs */
+@media (max-width: 475px) {
+
+    /* NAVBAR --------------------------------------------------------*/
+
+    header {
+        justify-content: flex-start;
+        padding-top: 1rem;
+    }
+
+    .logo {
+        height: 60px;
+    }
+
+    .nav-links {
+        gap: 0.75rem;
+    }
+
+    .nav-links li a {
+        font-size: 14px;
+    }
 }
